# enos-kubernetes

./: .gitignore  .gitlab-ci.yml  Changelog.md  MANIFEST.in  README.rst  conf.yaml  setup.cfg  tox.ini
docs/: conf.py  index.rst
enos_kubernetes/: __init__.py  build_conf.yml  cli.py  constants.py  tasks.py
enos_kubernetes/ansible/: post_install.yml  site.yml
enos_kubernetes/ansible/roles/common/tasks/: deploy.yml  g5k.yml
enos_kubernetes/ansible/roles/post_install/defaults/: main.yml
enos_kubernetes/ansible/roles/post_install/files/dashboard/: admin-serviceaccount.yaml
enos_kubernetes/ansible/roles/post_install/tasks/: dashboard.yml  main.yml  monitoring.yml
enos_kubernetes/tests/unit/: test_enos_kubernetes.py
