[metadata]
name = enos-kubernetes
version = 1.2.0
keywords = enoslib, evaluation, reproducible research, Grid5000, Chameleon Cloud, Vagrant
license_file = LICENSE.txt
url = https://gitlab.inria.fr/msimonin/enos-kubernetes
author = Matthieu Simonin
author_email = matthieu.simonin@inria.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
   enoslib~=4.0
   click>=6.7,<7
   # run kubespray in its own venv
   virtualenv

[options.packages.find]
exclude =
    docs

[options.entry_points]
console_scripts =
    ek = enos_kubernetes.cli:cli